@@ -496,10 +496,10 @@ of a given derived file:
 $ scons --debug=includes foo.o
 .EE
 
-.TP
--e, --environment-overrides
-Variables from the execution environment override construction
-variables from the SConscript files.
+.\" .TP
+.\" -e, --environment-overrides
+.\" Variables from the execution environment override construction
+.\" variables from the SConscript files.
 
 .TP
 .RI -f " file" ", --file=" file ", --makefile=" file ", --sconstruct=" file
