@@ -35,6 +35,7 @@ test.write('SConstruct', "")
 test.run(arguments = '-H')
 
 test.fail_test(string.find(test.stdout(), '-H, --help-options') == -1)
+test.fail_test(string.find(test.stdout(), '--debug=TYPE') == -1)
 
 test.pass_test()
  
